# Exercice-Generator-PyLib

./: README.md  main.py  pyproject.toml  setup.py  tree.txt
math_exercise_generator/: __init__.py  algebra.py  calculus.py  config.py  exercise_factory.py  geometry.py
tests/: test_algebra.py  test_calculus.py  test_geometry.py
